Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.2, 5.9.3
-
None
-
Microsoft Windows [Version 10.0.16299.64]
Android NDK r16, clang tool-chain
Android SDK API 27, build-tools 27.0.0
Qt tag v5.9.2,
Qt tag v5.9.3
-
-
e0213d1939ac6f78e9e8b54d4e974fa32f75026a
Description
logcat output
I/ActivityManager( 791): START u0 {act=android.intent.action.MAIN cat=[android.intent.category.LAUNCHER] flg=0x10200000 cmp=org.qtproject.example.QtQuickApp_v593/org.qtproject.qt5.android.bindings.QtActivity} from uid 10093 on display 0 I/ActivityManager( 791): Start proc org.qtproject.example.QtQuickApp_v593 for activity org.qtproject.example.QtQuickApp_v593/org.qtproject.qt5.android.bindings.QtActivity: pid=18916 uid=10228 gids={50228, 9997, 3003, 1028, 1015} abi=armeabi-v7a D/libQtQuickApp-v593.so(18916): (null):0 ((null)): QFactoryLoader::QFactoryLoader() checking directory path "/data/data/org.qtproject.example.QtQuickApp_v593/qt-reserved-files/plugins/platforms" ... D/libQtQuickApp-v593.so(18916): (null):0 ((null)): QFactoryLoader::QFactoryLoader() checking directory path "/data/app/org.qtproject.example.QtQuickApp_v593-1/lib/arm/platforms" ... I/ActivityManager( 791): Displayed org.qtproject.example.QtQuickApp_v593/org.qtproject.qt5.android.bindings.QtActivity: +2s617ms W/ActivityManager( 791): getTasks: caller 10093 is using old GET_TASKS but privileged; allowing D/libQtQuickApp-v593.so(18916): (null):0 ((null)): QFactoryLoader::QFactoryLoader() checking directory path "/data/data/org.qtproject.example.QtQuickApp_v593/qt-reserved-files/plugins/platformthemes" ... D/libQtQuickApp-v593.so(18916): (null):0 ((null)): QFactoryLoader::QFactoryLoader() checking directory path "/data/app/org.qtproject.example.QtQuickApp_v593-1/lib/arm/platformthemes" ... D/libQtQuickApp-v593.so(18916): (null):0 ((null)): QQmlImportDatabase::addImportPath: "/data/app/org.qtproject.example.QtQuickApp_v593-1/lib/arm/C:/Dev/Libs/Qt5/lib/5.9.3-android-arm-clang50/qml" D/libQtQuickApp-v593.so(18916): (null):0 ((null)): QQmlImportDatabase::addImportPath: "/data/data/org.qtproject.example.QtQuickApp_v593/qt-reserved-files//qml" D/libQtQuickApp-v593.so(18916): (null):0 ((null)): QQmlImportDatabase::addImportPath: "qrc:/qt-project.org/imports" D/libQtQuickApp-v593.so(18916): (null):0 ((null)): QQmlImportDatabase::addImportPath: "/data/app/org.qtproject.example.QtQuickApp_v593-1/lib/arm" D/libQtQuickApp-v593.so(18916): (null):0 ((null)): QQmlImports(qrc:/main.qml)::addLibraryImport: "QtQuick" 2.8 as "" D/libQtQuickApp-v593.so(18916): (null):0 ((null)): QQmlImports(qrc:/main.qml)::importExtension: loaded "/data/data/org.qtproject.example.QtQuickApp_v593/qt-reserved-files/qml/QtQuick.2/qmldir" W/libQtQuickApp-v593.so(18916): (null):0 ((null)): Found metadata in lib /data/data/org.qtproject.example.QtQuickApp_v593/qt-reserved-files/qml/QtQuick.2/libqtquick2plugin.so, metadata= W/libQtQuickApp-v593.so(18916): { W/libQtQuickApp-v593.so(18916): "IID": "org.qt-project.Qt.QQmlExtensionInterface/1.0", W/libQtQuickApp-v593.so(18916): "MetaData": { W/libQtQuickApp-v593.so(18916): }, W/libQtQuickApp-v593.so(18916): "className": "QtQuick2Plugin", W/libQtQuickApp-v593.so(18916): "debug": false, W/libQtQuickApp-v593.so(18916): "uri": [ W/libQtQuickApp-v593.so(18916): "QtQuick.2" W/libQtQuickApp-v593.so(18916): ], W/libQtQuickApp-v593.so(18916): "version": 329987 W/libQtQuickApp-v593.so(18916): } W/libQtQuickApp-v593.so(18916): W/libQtQuickApp-v593.so(18916): D/libQtQuickApp-v593.so(18916): (null):0 ((null)): Cannot load library /data/data/org.qtproject.example.QtQuickApp_v593/qt-reserved-files/qml/QtQuick.2/libqtquick2plugin.so: (dlopen failed: invalid flags to dlopen: 1001) W/libQtQuickApp-v593.so(18916): (null):0 ((null)): QLibraryPrivate::loadPlugin failed on "/data/data/org.qtproject.example.QtQuickApp_v593/qt-reserved-files/qml/QtQuick.2/libqtquick2plugin.so" : "Cannot load library /data/data/org.qtproject.example.QtQuickApp_v593/qt-reserved-files/qml/QtQuick.2/libqtquick2plugin.so: (dlopen failed: invalid flags to dlopen: 1001)" W/libQtQuickApp-v593.so(18916): (null):0 ((null)): QQmlApplicationEngine failed to load component W/libQtQuickApp-v593.so(18916): (null):0 ((null)): qrc:/main.qml:1 plugin cannot be loaded for module "QtQuick": Cannot load library /data/data/org.qtproject.example.QtQuickApp_v593/qt-reserved-files/qml/QtQuick.2/libqtquick2plugin.so: (dlopen failed: invalid flags to dlopen: 1001) W/libQtQuickApp-v593.so(18916): I/ActivityManager( 791): Process org.qtproject.example.QtQuickApp_v593 (pid 18916) has died
Attachments
Issue Links
- is duplicated by
-
QTBUG-65124 Qt's usage of RTLD_NODELETE when available can cause segfaults or more obscure problems on Android versions not supporting it
-
- Closed
-
- relates to
-
QTBUG-70197 [Android] Mapviewer example crashes (other examples fail to build) with 5.12.0-alpha
-
- Closed
-